# conan-emscripten-demo

./: .gitignore  README.md  run-demo.sh
consumer/: app.js  conanfile.txt
emsdk-demo-pkg/: CMakeLists.txt  c-functions.c  conanfile.py  cpp-functions.cpp
